templates/svc1.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: search
  name: search
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: search
  type: NodePort
status:
  loadBalancer: {}
