templates/svc2.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: mail
  name: mail
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: mail
  type: NodePort
status:
  loadBalancer: {}
